4-gitops/vanilla-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-backend-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - name: http
      protocol: TCP
      port: 2346
      targetPort: 3001
    - name: db
      port: 5432
      protocol: TCP
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: project-frontend-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres
